# CppCMakeProjectTemp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/main/: CMakeLists.txt  Main.cpp
src/main/include/ex/: stackback.h
src/test/: CMakeLists.txt  MainTest.cpp
